  That should mean copying works better, particularly in virtual
  folders. See #80 and #99.
- The data generated when dragging an item is now retrieved from
  the shell, which means drag and drop operations should work
  better. See #144.
- Dropping on a non-folder target (e.g. an executable or zip
  file) should now work. See #75 and #297.
- The items shown on the "Go" menu have been updated.
- The ability to play a navigation sound has been removed.
- The option to use fixed width tabs has been removed, as it
  doesn't appear to be properly supported by the tab control. See
  #255.

Version 1.4.0 (29/01/2024)
--------------------------
New features:
- The bookmarks system has been rewritten. The updated system has
  the following changes from the previous system:
  - Bookmarks are now managed in a very similar way to how
    they're managed in web browsers such as Chrome and Firefox.
    Bookmarks can be added to one of three top-level folders:
    - Bookmarks toolbar
    - Bookmarks menu
    - Other bookmarks
  - The add bookmark and manage bookmark dialogs are more
    functional than their equivalents in the previous version.
    For example, the manage bookmarks dialog allows items to be
    renamed directly (rather than by opening the edit bookmark
    dialog) and shows an appropriate context menu for bookmark
    folders in the treeview.
  - Bookmarks can now be copied/pasted.
  - When a bookmark is copied, the location of the bookmark is
    also copied as plain text. This makes it possible to paste
    the location into other applications.
  - Bookmarks can now be dragged and dropped between the bookmark
    windows.
  - Bookmarks on the bookmarks toolbar can now be arranged via
    drag and drop.
  - Right-clicking an item in the dropdown shown when clicking a
    folder on the bookmarks toolbar now shows the appropriate
    context menu.
  - In addition to being able to bookmark the current tab, it's
    also possible to bookmark all open tabs.