@@ -333,7 +333,7 @@
 #define IDC_EDIT_DESCRIPTION            1215
 #define IDC_STATIC_ATTRIBUTES           1216
 #define IDC_BUTTON_RESTOREDEFAULTS      1217
-#define IDC_SETTINGS_CHECK_ZIPFILES     1218
+#define IDC_SETTINGS_CHECK_CONTAINER_FILES 1218
 #define IDC_MASSRENAME_MORE             1219
 #define IDC_SETTINGS_CHECK_INSERTSORTED 1221
 #define IDC_CHECK_SHOWAPPNAME           1222
